components/kavita/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kavita
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    name: kavita
